# remotelint

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  startup.sh  tools.json
scripts/: clippy-unix  sqlfluff-unix
src/: main.rs
test/lint/: test.css  test.go  test.html  test.json  test.php  test.sql
test/linter/: test.c  test.exs
workbench/: mix.exs  package.json
