[package]
name = "sibyl"
version = "0.0.6"
edition = "2021"

[dependencies]
axum = { version = "0.5.15", features = ["multipart"] }
axum-server = { version = "0.3", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.83"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"]}